# CMakeList.txt : CMake project for A-Star-Search, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("A-Star-Search")

# Add source to this project's executable.
add_executable (A-Star-Search "A-Star-Search.cpp" "A-Star-Search.h")

# TODO: Add tests and install targets if needed.
